--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<img class="thumbnail" id="thumbnail" src="https://img.youtube.com/vi/31PWjb7Do1s/0.jpg" width="600"/>
 				</div>
 				<p class="description">
-					Built by Kyle McDonald, Manny Tan, Yotam Mann, and friends at Google Creative Lab. Thanks to <a href="http://www.birds.cornell.edu/Page.aspx?pid=1478" target="_blank">Cornell Lab of Ornithology</a> for their support. <a href="http://macaulaylibrary.org/guide/audio/essential-set-for-north-america" target="_blank">The Essential Set for North America</a> sounds are provided by the Macaulay Library. The open-source code is available <a href="https://github.com/googlecreativelab/" target="_blank">here</a>. Check out more at <a href="https://aiexperiments.withgoogle.com/" target="_blank">A.I. Experiments</a>.
+					Built by Kyle McDonald, Manny Tan, Yotam Mann, and friends. Thanks to <a href="http://www.birds.cornell.edu/Page.aspx?pid=1478" target="_blank">Cornell Lab of Ornithology</a> for their support. <a href="http://macaulaylibrary.org/guide/audio/essential-set-for-north-america" target="_blank">The Essential Set for North America</a> sounds are provided by the Macaulay Library. The open-source code is available <a href="https://github.com/googlecreativelab/" target="_blank">here</a>. <!--Check out more at <a href="https://aiexperiments.withgoogle.com/" target="_blank">A.I. Experiments</a>.-->
 				</p>
 			</div>
 		</div>
@@ -57,7 +57,8 @@
 				<p><div id="startLink" class="startLink">EXPLORE</div></p>
 				<p><div id="aboutLink" class="aboutLink">ABOUT THIS PROJECT</div></p>
 			</div>
-			<div id="badges">
+			
+			<div id="badges" style="display:none">
 				<div class="badgeAI" style="cursor: pointer;" onclick="window.open('https://aiexperiments.withgoogle.com', '_blank')"></div>
 				<div class="pipe"></div>
 				<div class="badgeFriends"></div>
