--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 				<p><div id="aboutLink" class="aboutLink">ABOUT THIS PROJECT</div></p>
 			</div>
 			
-			<div id="badges" style="display:none">
+			<div id="badges">
 				<div class="badgeAI" style="cursor: pointer;" onclick="window.open('https://aiexperiments.withgoogle.com', '_blank')"></div>
 				<div class="pipe"></div>
 				<div class="badgeFriends"></div>
